traces/bug_276.txt
examples++-load/ClosePoints.cpp:233: error: DEAD_STORE
  The value written to &qo10 (type int) is never used.
Showing all 1 steps of the trace


examples++-load/ClosePoints.cpp:233:5: Write of unused value
231.       int po01 = P.step*P.shapej.step;
232.       double * q0=&(Q(0,0));
233.       int qo10 =Q.step*Q.shapei.step;
           ^
234.       int qo01 =Q.step*Q.shapej.step;
235.   
